{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "51ba13fd-d555-423c-b067-27df10622bcf",
            "actions": [
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "7b18cabe-3ce6-42f8-9662-229e1a7655ed",
                    "expectedControlType": "Vector2",
                    "processors": "InvertVector2(invertX=false)",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ThrowSpeed",
                    "type": "Value",
                    "id": "494fc69b-8654-448f-84c7-e6dd9791ce9e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ThrowPastry",
                    "type": "Button",
                    "id": "96922d8b-2d49-4689-8edb-a30b5a25f15d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SpawnPastry",
                    "type": "Button",
                    "id": "cee441bf-2432-452c-9c37-b8f4dc449f71",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "efb8cc06-7ad5-429f-bccd-28e9b665e9c3",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d2fde6fb-fe9e-4207-8ce4-33fb50313e83",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThrowPastry",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "507c43b1-eedf-49f6-baa5-c83a9dd1f54b",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpawnPastry",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c4b1863f-96e3-4365-b036-a0abc6628796",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThrowSpeed",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}